Fix toast and softkeys
Made `.toast` fixed to the top.
Made `.softkeys` fixed to the bottom, fixed width to prevent overflowing.

--- a/kaios-native-ui.css
+++ b/kaios-native-ui.css
@@ -8,7 +8,7 @@
   --capitalization: capitalize;
 
   /* change to 'auto', if you want scrolling */
-  --content-overflow: auto;
+  --content-overflow: hidden;
 
   --app-background: #ffffff;
 
@@ -18,8 +18,12 @@
   --header-background: #320574;
   --header-color: #ffffff;
 
+  --softkey-height: 2rem;
+
   --softkeys-background: #cccccc;
   --softkeys-color: #323232;
+  --softkeys-height: 3rem;
+  --softkeys-padding: 0.5rem;
 
   --item-background: #ffffff;
   --item-text-color: #323232;
@@ -145,7 +149,7 @@
 html,
 body {
   width: 100vw;
-  padding: 0;
+  padding: 0 0 calc(var(--softkeys-height) + var(--softkeys-padding)) 0;
   margin: 0;
 }
 
@@ -658,11 +662,11 @@ body {
   bottom: 0;
   width: 100%;
   box-sizing: border-box;
-  padding: 0.5rem;
+  padding: var(--softkeys-padding);
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  height: 3rem;
+  height: var(--softkeys-height);
   background: var(--softkeys-background);
   color: var(--softkeys-color);
 }
@@ -670,7 +674,7 @@ body {
 .softkey {
   overflow: hidden;
   vertical-align: middle;
-  height: 2rem;
+  height: var(--softkey-height);
 }
 
 .softkey-left {
